All around progress
- great gui progress
-made buttons functional
  -you can go forward and backward
   on days of the month now and it
  displays transactions accordingly
 -the addition button creates a custom prompt now
   - you can add transactions as visual
 divs or you can cancel
 Everything still needs work, but compared to other projects I'm making good progress so far.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Examples</title>
 <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no'/>
-<meta name="description" content="">
+<meta name="description" content="A small inventory keeping web app">
 <meta name="keywords" content="">
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id="head">
-        <button><</button>
+        <button id="dateBack"><</button>
         <p id="date">some date</p>
-        <button>></button>
+        <button id="dateForward">></button>
     </div>
-    <div id="content">
+    <div id="middle">
         <div class="side">
 
         </div>
-            <p>Some transactions</p>
+        <div id="content">
+        </div>
         <div class="side">
             
         </div>
@@ -27,6 +28,8 @@
     </div>
 
     <script src="scripts/script.js" ></script>
+    <script src="scripts/dataScript.js">
+    </script>
 
 </body>
 </html>
