CSS practice and more labels
Fixed website title and description

Added a title and a label for each value on the main page

Played around with transaction styling:
 Centered and vertically aligned text
 The delete button's positioning was giving me problems because I was initially working with inline-block boxes, once I checked a solution and switched to flex that problem went away
 Added a border to the bottom, but it looks too "sharp" so I'm going to have to make a custom asset for it to make it look more like the item is underlined
Center most text
Removed all button styling to make space for future assets
Changed the main bkg color to black and text color to white just to see what it would look like. I need to practice some color theory.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Examples</title>
+<title>Finance Logger 2021</title>
 <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no'/>
-<meta name="description" content="A small inventory keeping web app">
+<meta name="description" content="Finance logging">
 <meta name="keywords" content="">
 <link href="styles/style.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
     <div id="head">
@@ -20,6 +21,14 @@
 
         </div>
         <div id="content">
+            <h1>Transactions</h1>
+            <div class="tranInfo">
+                <div class="tranData">
+                    <p class="cat">Category</p>
+                    <p class="desc">Description</p>
+                    <p class="amount">Amount</p>  
+                </div>
+            </div>
         </div>
         <div class="side">
             
