Visual update: fonts and assets
Decided to go for a receipt design. Added a font and some huge  stock photo background images, while making the date navigation a subtle shade.
 Sketched the button assets by myself.
 Decided to change the category color to affect the text and underline colors instead of the entire div, since it is less of an eyesore. Also contemplating whether I want to make the color options fixed instead of a choice from a color picker.

Next up the look of the input prompt and making the gradient into half a radial intead of a full radial since the full one cuts off at the bottom. The button sketches are also going to need some refinement and the entire receipt area needs more ascii art for the proper receipt aesthetic.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <meta name="keywords" content="">
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Syne+Mono&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="head">
-        <button id="dateBack"><</button>
-        <p id="date">some date</p>
-        <button id="dateForward">></button>
+        <button class="navArrow" id="dateBack"><img src="assets/buttArrow0.2.png"></button>
+        <h1 id="date">some date</h1>
+        <button class="navArrow" id="dateForward"><img src="assets/buttArrow0.2.png"></button>
     </div>
     <div id="middle">
         <div class="side">
