Calendar View added and implemented
Added calendar view which is accessed by clicking on the date in basic view.

This allows you to skip to any date in the current year.

Dates with transactions are colored with that date's dominant transaction category color.

The date system now runs on a session storage variable called "setDate" and other functions now no longer look to the header text for the current date, but instead receive that from the variable as well. Had to throw some functions around and fix some odd global variable positions during the implementation of this.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="head">
         <button class="navArrow" id="dateBack"><img src="assets/buttHollowArrow.png"></button>
-        <h1 id="date">some date</h1>
+        <button id="date" onclick="window.location.href='calendarView.html'">some date</button>
         <button class="navArrow" id="dateForward"><img src="assets/buttHollowArrow.png"></button>
     </div>
     <div id="middle">
